修改项目配置。